# tritonic

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GEMMA4_UPDATE.md  README.md  REPO_META.yaml  TESTING_INSTRUCTIONS.md  TESTING_SUMMARY.md
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  copilot-instructions.md  labeler.yml
.github/workflows/: README.md  ci.yml  code-review.yml  docker-publish.yml  pre-commit.yml  publish-github-release.yml  security.yml
build_test/: CMakeCache.txt
deploy/: README.md
deploy/instance_segmentation/rf-detr/: deploy_triton_model.sh  export_trt.sh
deploy/object_detection/rt-detr/: clone_repo.sh  export.py  export.sh  setup_env.sh
deploy/object_detection/yolo/: README.md  clone_repo.sh  export.py  export.sh  setup_env.sh
deploy/object_detection/yolo/ensemble/: README.md
deploy/object_detection/yolo/ensemble/dali/: generate_pipeline.py  setup_model_repository.sh
deploy/optical_flow/: raft_exporter.py  raft_exporter.sh
deploy/video_classification/timesformer/: export_timesformer_to_onnx.py
docker/: Dockerfile
docker/scripts/: docker_triton_run.sh  extract_triton_libs.sh  extract_triton_libs_debug.sh  run_client.sh  run_optical_flow.sh  run_optical_flow_image_pair.sh  run_tests.sh  run_vit_classifier.sh
docs/: ENSEMBLE_INFERENCE_ROADMAP.md  ROADMAP.md  TESTING_CHAT_BACKEND.md  TESTING_GEMMA.md  TESTING_INSTRUCTIONS.md  Versioning.md
docs/guides/: InstanceSegmentation.md  Kubernetes_setup.md  Local_CI_Checks.md  ObjectDetection.md  OpticalFlow.md  SharedMemory.md  TensorflowClassification.md  TorchvisionClassification.md  ViTClassification.md  vllm_multimodal_support.md
examples/: shared_memory_example.cpp
helm/triton-server/: Chart.yaml  values.yaml
helm/triton-server/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
include/: App.hpp  CommonTypes.hpp  Config.hpp  ConfigManager.hpp  IFileSystem.hpp  ILogger.hpp  Logger.hpp  TaskInterface.hpp  common.hpp
include/tritonic/chat/: ichat_backend.hpp
include/tritonic/core/: encoded_image.hpp  interfaces.hpp  types.hpp
include/tritonic/infra/: config.hpp  config_manager.hpp  logger.hpp
include/tritonic/triton/: itriton.hpp  model_info.hpp  triton_backend.hpp
integration-tests/yolo-ensemble/: compare_dali.py  compare_inference.py  run.py
k8s/: check_and_deploy_triton.sh  configmap.yaml  deployment-cpu.yaml  deployment-gpu.yaml  hpa.yaml  ingress.yaml  namespace.yaml  persistent-volume.yaml  service.yaml
k8s/scripts/: README.md  check_and_deploy_triton.sh  cluster.sh  gpu.sh  kubectl.sh  lib.sh  triton.sh
labels/: kinetics400.txt
scripts/: format_all.sh  test_chat_backend_gemma.sh  verify_gemma_api.py
scripts/docker/: docker_triton_run.sh  run_debug.sh  run_optical_flow_image_pair.sh
scripts/k8s/: README.md  check_and_deploy_triton.sh
scripts/setup/: install_git_hooks.sh
src/chat/: ChatBackend.cpp  ChatBackend.hpp  ChatSession.cpp  ChatSession.hpp  IChatBackend.hpp
src/common/: IInferenceBackend.hpp
src/main/: App.cpp  ConfigManager.cpp  Logger.cpp  client.cpp
src/tasks/: task_factory.cpp
src/tasks/instance_segmentation/src/: RFDetrSeg.cpp  RFDetrSeg.hpp
src/tasks/object_detection/src/: RFDetr.cpp  RFDetr.hpp  RTDetr.cpp  RTDetrUltralytics.cpp
src/tasks/video_classification/src/: TimeSformer.cpp  TimeSformer.hpp
src/triton/: ITriton.hpp  Triton.cpp  Triton.hpp  TritonBackend.hpp  TritonModelInfo.hpp
src/utils/: ConfigManager.cpp  FileSystem.cpp  Logger.cpp
tests/: CMakeLists.txt  test_app.cpp  test_classification_preprocess.cpp  test_main.cpp  test_optical_flow.cpp  test_rfdetr_repro.cpp  test_shared_memory.cpp  test_triton.cpp
tests/data/ensemble/yolo/: cpu_preprocess_sha256.json
tests/integration/: test_chat_backend_integration.cpp
tests/mocks/: MockChatBackend.hpp  MockFileSystem.hpp  MockTriton.hpp
tests/tools/: yolo_preprocess_baseline.cpp
tests/unit/: test_chat_backend.cpp  test_config.cpp  test_encoded_image.cpp  test_logger.cpp  test_triton_interface.cpp  test_yolo_preprocessing_contract.cpp
